--- a/document/K-Digital(est)/01/0102.md
+++ b/document/K-Digital(est)/01/0102.md
@@ -76,7 +76,7 @@ TCP 세그먼트 - 출발 / 목적지 PORT / 전송순서
 500-서버 리소스오류<br>
 503-일시적으로 서버가 과부하 상태이거나 점검중이기 때문에 현재 페이지를 나타낼 수 없을때 뜨는 에러.
 
-![Untitled](https://www.notion.so/oreumi/HTML-67cedd3094a54570a7c14a849cf0036b?pvs=4#1ab5e671dbf24595bd2c5e68d19283d4)
+![Untitled]([https://www.notion.so/oreumi/HTML-67cedd3094a54570a7c14a849cf0036b?pvs=4#1ab5e671dbf24595bd2c5e68d19283d4](https://github.com/HuiGyun-kim/TIL/blob/main/document/K-Digital(est)/01/html_error_code.png))
 
 ```
 💡 하루 10개 질문 - (네트워크)
