--- a/document/K-Digital(est)/01/0102.md
+++ b/document/K-Digital(est)/01/0102.md
@@ -76,7 +76,7 @@ TCP 세그먼트 - 출발 / 목적지 PORT / 전송순서
 500-서버 리소스오류<br>
 503-일시적으로 서버가 과부하 상태이거나 점검중이기 때문에 현재 페이지를 나타낼 수 없을때 뜨는 에러.
 
-![Untitled](document/K-Digital(est)/01/html_error_code.png)
+![html_error_code](https://github.com/HuiGyun-kim/TIL/assets/105576581/cfd83337-9fd4-4c72-bde4-6e07afa0b637)
 
 ```
 💡 하루 10개 질문 - (네트워크)
@@ -97,5 +97,5 @@ TCP 세그먼트 - 출발 / 목적지 PORT / 전송순서
 
 ## 배운점
 
-1. 대충 겉핡기 식으로 의미만 알고 넘어갔던 웹 용어를 조금 깊게 들어간 것만으로 흥미가 솟네요. 웹 환경 흐름을 제대로 배워야겠다는 생각이 듭니다.
+1. 대충 겉핡기 식으로 의미만 알고 넘어갔던 웹 용어를 조금 깊게 들어간 것만으로 흥미가 솟네요.<br> 웹 환경 흐름을 제대로 배워야겠다는 생각이 듭니다.
 2. 단순히 외우는 게 아닌 원리를 이해하는 방식으로 공부해야겠다는 생각이 듭니다.
