--- a/document/K-Digital(est)/01/0102.md
+++ b/document/K-Digital(est)/01/0102.md
@@ -82,18 +82,18 @@ TCP 세그먼트 - 출발 / 목적지 PORT / 전송순서
 💡 하루 10개 질문 - (네트워크)
 ```
 
-| 번호 | 질문 |
-| --- | --- |
-| 1 | HTTP와 HTTPS의 차이점에 대해 설명해주세요. |
-| 2 | TCP와 UDP의 차이점은 무엇인가요? |
-| 3 | IP 주소와 포트 번호의 역할에 대해 설명해주세요. |
-| 4 | 로드 밸런싱이 무엇이며 왜 필요한가요? |
-| 5 | TCP의 3-way handshake 과정을 설명해주세요. |
-| 6 | TCP 세그먼트와 IP 패킷의 관계를 설명해주세요. |
-| 7 | 오류 코드 404와 500의 차이점은 무엇인가요? |
-| 8 | DNS 서버의 역할에 대해 설명해주세요. |
-| 9 | HTTP 프로토콜의 요청 흐름을 설명해주세요. |
-| 10 | 네트워크의 4계층 구조와 각 계층의 역할에 대해 설명해주세요. |
+| 번호 | 질문                                 |
+| --- |------------------------------------|
+| 1 | `HTTP`와 `HTTPS`의 차이점에 대해 설명해주세요.   |
+| 2 | `TCP`와 `UDP`의 차이점은 무엇인가요?              |
+| 3 | `IP 주소`와 `포트 번호`의 역할에 대해 설명해주세요.       |
+| 4 | `로드 밸런싱`이 무엇이며 왜 필요한가요?              |
+| 5 | `TCP`의 `3-way handshake 과정`을 설명해주세요.   |
+| 6 | `TCP 세그먼트`와 `IP 패킷`의 관계를 설명해주세요.       |
+| 7 | 오류 코드 `404`와 `500`의 `차이점`은 무엇인가요?        |
+| 8 | `DNS 서버`의 역할에 대해 설명해주세요.             |
+| 9 | `HTTP 프로토콜`의 요청 흐름을 설명해주세요.          |
+| 10 | 네트워크의 `4계층 구조`와 `각 계층의 역할`에 대해 설명해주세요. |
 
 ## 배운점
 
