--- a/document/K-Digital(est)/01/0104.md
+++ b/document/K-Digital(est)/01/0104.md
@@ -27,17 +27,16 @@
         - 중간에 닫는 태그를 빠트렸을 때 오류 체크 가능.
 2. 협업할 때
 
-```jsx
+```html
 <!-- 휴대폰번호 인증필요 -->
 <input type="tel">
 <!-- #2022.02.20 4:00 업데이트 -->
 ```
- 3. 임시 처리
+3. 임시 처리
 
-```jsx
+```html
 <!-- 신청기간이 아니여서 임시 주석처리
-a href="#">신청페이지 바로가기</a>
--->
+<a href="#"> 신청페이지 바로가기 </a> -->
 ```
 
 ## html 분석
@@ -173,9 +172,9 @@ icon: 파비콘을 지정할 때 사용.<br>
 - 문서의 주요 흐름을 따라가지 않고, 보조적인 역할만 하는 공간.
 - 각주, 광고 배너등에 사용.
 
-<aside>
-💡 **하루 10개 질문**
-
+```
+💡 하루 10개 질문
+```
 | 번호 | 질문 |
 | --- | --- |
 | 1 | `시맨틱 요소`와 `비시맨틱 요소`의 `차이점`은 무엇인가 |
